# backend-joltamp

./: .env  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: blank.yml
analytics/: load.go  main.go
friends/: get_friends.go  get_requests.go  remove_friends.go  response_request.go  send_request.go
messages/: delete.go  edit.go  getChannelFromUUID.go  load.go  send.go
security/: encryption.go  verifyJWT.go
src/: main.rs
src/routes/users/: register.rs
src/security/: mod.rs  passwords.rs
types/: messages.go
users/: changeDisplayname.go  changeEmail.go  changeSelfInfo.go  getInfo.go  getSelfInfo.go  isAdmin.go  login.go  register.go  setProfile.go  setStatus.go
websockets/: main.go
